--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
   <!-- TITLE -->
-  <section id="title">
+  <section id="title" class="colored-section">
 
     <div class="container-fluid">
       <!-- Nav Bar -->
@@ -68,7 +68,7 @@
   </section>
 
   <!-- Features -->
-  <section id="features">
+  <section id="features" class="white-section">
     <div class="container-fluid">
 
 
@@ -98,7 +98,7 @@
   </section>
 
   <!-- Testimonials -->
-  <section id="testimonials">
+  <section id="testimonials" class="colored-section">
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item container-fluid active">
@@ -126,15 +126,15 @@
   </section>
 
   <!-- Press -->
-  <section id="press">
-    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo-img">
+  <section id="press" class="colored-section">
+    <img class="press-logo" src="images/tc.png" alt="tc-logo-img">
     <img class="press-logo" src="images/tnw.png" alt="tw-logo-img">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo-img">
     <img class="press-logo" src="images/mashable.png" alt="mashable-logo-img">
   </section>
 
   <!-- Pricing -->
-  <section id="pricing">
+  <section id="pricing" class="white-section">
     <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
@@ -194,7 +194,7 @@
   </section>
 
   <!-- Call to Action -->
-  <section id="cta">
+  <section id="cta" class="colored-section">
     <div class="container-fluid">
       <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
       <button type="button" class="btn btn-lg btn-dark download-button"><i class="fab fa-apple"></i> Download</button>
@@ -205,7 +205,7 @@
     <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button> -->
   </section>
 
-  <footer id="footer">
+  <footer id="footer" class="white-section">
     <div class="container-fluid">
       <i class="fab fa-twitter social-icons"></i>
       <i class="fab fa-facebook-f social-icons"></i>
